# pwexplode

./: .gitmodules  README.md  build-pkg.sh  pwexplode.py  pyproject.toml  setup.cfg
tests/: tests.py
