[build-system]
requires = ["setuptools>=61.2.0", 
            "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pwexplode"
authors = [{name = "Sven Kochmann"}]
description = "implementation of the PKWARE Data Compression Library format (imploding) for byte streams."
readme = "README.md"
keywords = ["compression", "pkware", "implode"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Schallaven/pwexplode"
"Bug Tracker" = "https://github.com/Schallaven/pwexplode/issues"

[tool.setuptools]
zip-safe = true
py-modules = ["pwexplode"]

[tool.setuptools_scm]
