[metadata]
name = pwexplode
author = Sven "Schallaven" Kochmann
url = https://github.com/KOLANICH-libs/urm.py
description = implementation of the PKWARE Data Compression Library format (imploding) for byte streams.
long_description = file: README.md
keywords = compression, pkware, implode
license = GPL-3.0-or-later
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = pwexplode
setup_requires = setuptools>=44; wheel; toml; setuptools_scm>=3.4.3
test_requires = fileTestSuite @ https://github.com/fileTestSuite/fileTestSuite.py
